# hackathon-24

./: .env  .flake8  .gitignore  README.md  __azurite_db_blob__.json  __azurite_db_blob_extent__.json  _alternative.md  generate_alternatives.py  main.py  process_md_files.py  pyproject.toml
backend/: .dockerignore  Dockerfile  api.py  assistant.py  auth.py  build_push.sh  pyproject.toml
backend/booking/: mock.py
chatbot/: chat.py  llama.py
data/: 1to1_mentoring.md  1to1_mentoring_alternative.md  3rd_pillar_pension_fund.md  3rd_pillar_pension_fund_alternative.md  GDPR _Data_Privacy.md  HR_coffees.md  IT_council_Visma.md  IT_council_Visma_alternative.md  MultiSport_card.md  MultiSport_card_alternative.md  Visma_Slovakia_for_managers.md  Visma_Slovakia_for_managers_alternative.md  alza_benefit.md  alza_benefit_alternative.md  amount_due.md  amount_paid.md  annual_taxes.md  annual_taxes_alternative.md  attendance.md  attendance_Tempo-Jira.md  attendance_Tempo-Jira_alternative.md  attendance_alternative.md  bank_account_number.md  bank_registration_number.md  basic_information.md  basic_information_alternative.md  benefits.md  bic.md  booking_app.md  booking_app_alternative.md  business_trip.md  business_trip_alternative.md  business_trip_alternative_alternative.md  business_trip_corrected.md  business_trip_corrected_alternative.md  buy_peripherals.md  buy_peripherals_alternative.md  buyer_reference.md  certifications.md  certifications_alternative.md  (+115 more)
elaGPT/: manifest.ts
embeddings/: prepare_data.py  semantic_search.py
hackGPT/: app.js  package.json
idellaData/: 2or4-EyesBackofficeApproval.md  CancelProcess.md  ChangePhaseOrOutcome.md  CheckAvailableServices.md  CompleteProcess.md  EventGridClientProvider.md  EventGridPublisher.md  FailProcess.md  HttpStartValidator.md  KeyVault.md  LogInformation.md  ProcessCloudEventPublisher.md  ProcessDataUpdater.md  ProcessMutation.md  ProcessMutationTableClientProvider.md  SendOutput.md  SendOutputTableClientProvider.md  ServiceBusClient.md  StartProcess.md  StoreData.md  (+3 more)
localmodel/: README.md  main.py  pyproject.toml
localmodel/chatbot/: chat.py  llama.py
localmodel/embeddings/: chroma.py  prepare_data.py  semantic_search.py
py/: Dockerfile.slackbot  README.md  app.py  deployment.yaml  main.py  pyproject.toml
(+79 files in other folders)
