[tool.poetry]
name = "hackathon2024-workshop"
version = "0.1.0"
description = ""
authors = ["anton cornak"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
langchain = "^0.3.7"
langchain-community = "^0.3.7"
langchain-huggingface = "^0.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
