[tool.poetry]
name = "hackathon-24"
version = "0.1.0"
description = ""
authors = ["Michal Varga <michal.varga@youforce.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.55.0"
python-dotenv = "^1.0.1"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
