[tool.poetry]
name = "hackathon2024-workshop"
version = "0.1.0"
description = ""
authors = ["anton cornak"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
transformers = "^4.46.2"
langchain-community = "^0.3.7"
langchain-huggingface = "^0.1.2"
unstructured = {extras = ["md"], version = "^0.16.5"}
langchain-chroma = "^0.1.4"
libmagic = "^1.0"
langchain = "^0.3.7"
openai = "^1.55.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
