[tool.poetry]
name = "py"
version = "0.1.0"
description = ""
authors = ["Martin Medvec <martin.medvec@visma.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
slack-bolt = "^1.21.2"
fastapi = {extras = ["standard"], version = "^0.115.5"}
setuptools = "^75.6.0"
aiohttp = "^3.11.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
